fixed shrimp cutoff

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -365,7 +365,7 @@ Hero
   position: absolute;
   bottom: 0;
   left: 0;
-  height: 9rem;
+  height: 10rem;
   width: 200%;
   background: url('../assets/vector.svg');
   background-size: cover;
@@ -376,7 +376,7 @@ Hero
 }
 @media screen and (min-width: 800px) {
   .hero {
-    height: 20rem;
+    height: 25rem;
   }
   .hero-person {
     width: 30rem;
